--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: Europe/Madrid
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: D-C-M Blog
+title: D-C-M
 
 tagline: "Design Code Mastery: Empowering Creativity, Together in Code." # it will display as the sub-title
 
