Added Google Site Verification Code

--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ social:
      - https://www.linkedin.com/in/martin-ferrero-thompson
      - https://www.instagram.com/designcodemastery
 
-google_site_verification: # fill in to your verification string
+google_site_verification: 0ru2D2mjEJnJOJL4zvpxluBpALUPeHFuIfQfQRG91f8
 
 # ↑ --------------------------
 # The end of `jekyll-seo-tag` settings
